syntax = "proto3";

package GrpcProject.Protos.Models;

message Product
{
    uint64 id    = 1;
    string name  = 2;
    double price = 3;
}

message ListProductResponse
{
    repeated Product product = 1;
}